{
  "version": 4,
  "terraform_version": "1.4.4",
  "serial": 79,
  "lineage": "52b2c1bb-0c9c-be98-a843-c0745e21b886",
  "resources": [
    {
      "module": "module.eks_blueprints.module.aws_eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:413436767063:security-group/sg-06fe340d83d9d59ba",
            "description": "EKS cluster security group",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0faf59511791eda71"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0faf59511791eda71"
                ],
                "self": false,
                "to_port": 10250
              }
            ],
            "id": "sg-06fe340d83d9d59ba",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0faf59511791eda71"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "eks-blueprints-cluster-20230411010501809800000001",
            "name_prefix": "eks-blueprints-cluster-",
            "owner_id": "413436767063",
            "revoke_rules_on_delete": false,
            "tags": {
              "Blueprint": "eks-blueprints",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-blueprints-cluster"
            },
            "tags_all": {
              "Blueprint": "eks-blueprints",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-blueprints-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-06f90c9867f441d35"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_blueprints.module.aws_eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:413436767063:security-group/sg-0faf59511791eda71",
            "description": "EKS node shared security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Egress NTP/TCP to internet",
                "from_port": 123,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 123
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Egress NTP/UDP to internet",
                "from_port": 123,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 123
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Egress all HTTPS to internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06fe340d83d9d59ba"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              }
            ],
            "id": "sg-0faf59511791eda71",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06fe340d83d9d59ba"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06fe340d83d9d59ba"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              }
            ],
            "name": "eks-blueprints-node-20230411010501809900000002",
            "name_prefix": "eks-blueprints-node-",
            "owner_id": "413436767063",
            "revoke_rules_on_delete": false,
            "tags": {
              "Blueprint": "eks-blueprints",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-blueprints-node",
              "kubernetes.io/cluster/eks-blueprints": "owned"
            },
            "tags_all": {
              "Blueprint": "eks-blueprints",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-blueprints-node",
              "kubernetes.io/cluster/eks-blueprints": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-06f90c9867f441d35"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_blueprints.module.aws_eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-3682284653",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06fe340d83d9d59ba",
            "security_group_rule_id": "sgr-0e3af8110bfe693fa",
            "self": false,
            "source_security_group_id": "sg-0faf59511791eda71",
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.eks_blueprints.module.aws_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_nodes_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-1440396215",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06fe340d83d9d59ba",
            "security_group_rule_id": "sgr-00f5b8a5a6c9c0b1f",
            "self": false,
            "source_security_group_id": "sg-0faf59511791eda71",
            "timeouts": null,
            "to_port": 10250,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.eks_blueprints.module.aws_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-1075124479",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06fe340d83d9d59ba",
            "security_group_rule_id": "sgr-01845a4bb81b44c8e",
            "self": false,
            "source_security_group_id": "sg-0faf59511791eda71",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.eks_blueprints.module.aws_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_blueprints.module.aws_eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-3923129038",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0faf59511791eda71",
            "security_group_rule_id": "sgr-046d77216d9a0f91e",
            "self": false,
            "source_security_group_id": "sg-06fe340d83d9d59ba",
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.eks_blueprints.module.aws_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_https",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress all HTTPS to internet",
            "from_port": 443,
            "id": "sgrule-1835077344",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0faf59511791eda71",
            "security_group_rule_id": "sgr-0e217ec35fca107ae",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.eks_blueprints.module.aws_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_ntp_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress NTP/TCP to internet",
            "from_port": 123,
            "id": "sgrule-2998875134",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0faf59511791eda71",
            "security_group_rule_id": "sgr-0b627c51233913514",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 123,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.eks_blueprints.module.aws_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_ntp_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress NTP/UDP to internet",
            "from_port": 123,
            "id": "sgrule-3424720627",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0faf59511791eda71",
            "security_group_rule_id": "sgr-0d8a51e8a8c431575",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 123,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.eks_blueprints.module.aws_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-2054141794",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0faf59511791eda71",
            "security_group_rule_id": "sgr-03330eea95d1e0663",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.eks_blueprints.module.aws_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-4094178564",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0faf59511791eda71",
            "security_group_rule_id": "sgr-04e8ebf900e0af97d",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.eks_blueprints.module.aws_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-4269967779",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0faf59511791eda71",
            "security_group_rule_id": "sgr-046d77216d9a0f91e",
            "self": false,
            "source_security_group_id": "sg-06fe340d83d9d59ba",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.eks_blueprints.module.aws_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-3919706531",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0faf59511791eda71",
            "security_group_rule_id": "sgr-01a5d9a1b74c45c28",
            "self": false,
            "source_security_group_id": "sg-06fe340d83d9d59ba",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.eks_blueprints.module.aws_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-3490386413",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0faf59511791eda71",
            "security_group_rule_id": "sgr-03330eea95d1e0663",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.eks_blueprints.module.aws_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-1951707650",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0faf59511791eda71",
            "security_group_rule_id": "sgr-04e8ebf900e0af97d",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.eks_blueprints.module.aws_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_blueprints.module.aws_eks_teams[0]",
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "team",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "index_key": "team-riker",
          "schema_version": 0,
          "attributes": {
            "id": "team-riker",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "appName": "riker-team-app",
                  "billingCode": "example",
                  "branch": "example",
                  "domain": "example",
                  "environment": "dev",
                  "projectName": "project-riker",
                  "uuid": "example"
                },
                "name": "team-riker",
                "resource_version": "4045",
                "uid": "a05d0a26-29cf-4045-957b-2ca51eafb3ff"
              }
            ]
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "data.aws_eks_cluster_auth.this",
            "module.eks_blueprints.data.aws_caller_identity.current",
            "module.eks_blueprints.data.aws_eks_cluster.cluster",
            "module.eks_blueprints.data.aws_iam_policy_document.eks_key",
            "module.eks_blueprints.data.aws_iam_session_context.current",
            "module.eks_blueprints.data.aws_partition.current",
            "module.eks_blueprints.data.aws_region.current",
            "module.eks_blueprints.data.http.eks_cluster_readiness",
            "module.eks_blueprints.module.aws_eks.aws_cloudwatch_log_group.this",
            "module.eks_blueprints.module.aws_eks.aws_eks_cluster.this",
            "module.eks_blueprints.module.aws_eks.aws_iam_role.this",
            "module.eks_blueprints.module.aws_eks.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.eks_blueprints.module.aws_eks.aws_security_group.node",
            "module.eks_blueprints.module.aws_eks.aws_security_group_rule.cluster",
            "module.eks_blueprints.module.aws_eks.aws_security_group_rule.node",
            "module.eks_blueprints.module.aws_eks.data.aws_caller_identity.current",
            "module.eks_blueprints.module.aws_eks.data.aws_iam_policy_document.assume_role_policy",
            "module.eks_blueprints.module.aws_eks.data.aws_partition.current",
            "module.eks_blueprints.module.aws_eks.module.kms.aws_kms_external_key.this",
            "module.eks_blueprints.module.aws_eks.module.kms.aws_kms_key.this",
            "module.eks_blueprints.module.aws_eks.module.kms.data.aws_caller_identity.current",
            "module.eks_blueprints.module.aws_eks.module.kms.data.aws_iam_policy_document.this",
            "module.eks_blueprints.module.aws_eks.module.kms.data.aws_partition.current",
            "module.eks_blueprints.module.kms.aws_kms_key.this",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:413436767063:network-acl/acl-03bc31fb109e3d605",
            "default_network_acl_id": "acl-03bc31fb109e3d605",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-03bc31fb109e3d605",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "413436767063",
            "subnet_ids": [
              "subnet-00d186ecb2885d7d4",
              "subnet-048c3115fc7810c31",
              "subnet-05fe1547d94f3f012",
              "subnet-0b103d3c61d0425b2",
              "subnet-0e67129720af216b3",
              "subnet-0f481ca00115fd7ec"
            ],
            "tags": {
              "Blueprint": "eks-blueprints",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-blueprints-default"
            },
            "tags_all": {
              "Blueprint": "eks-blueprints",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-blueprints-default"
            },
            "vpc_id": "vpc-06f90c9867f441d35"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:413436767063:route-table/rtb-03392c74f1067828f",
            "default_route_table_id": "rtb-03392c74f1067828f",
            "id": "rtb-03392c74f1067828f",
            "owner_id": "413436767063",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Blueprint": "eks-blueprints",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-blueprints-default"
            },
            "tags_all": {
              "Blueprint": "eks-blueprints",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-blueprints-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-06f90c9867f441d35"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:413436767063:security-group/sg-078e0fe2aeffd8f8d",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-078e0fe2aeffd8f8d",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "413436767063",
            "revoke_rules_on_delete": false,
            "tags": {
              "Blueprint": "eks-blueprints",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-blueprints-default"
            },
            "tags_all": {
              "Blueprint": "eks-blueprints",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-blueprints-default"
            },
            "vpc_id": "vpc-06f90c9867f441d35"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0240c2feff117a026",
            "association_id": "eipassoc-09e8735e5c98feb8d",
            "domain": "vpc",
            "id": "eipalloc-0240c2feff117a026",
            "network_border_group": "ca-central-1",
            "network_interface": "eni-076e29cfd7f9f75fd",
            "private_dns": "ip-10-0-0-197.ca-central-1.compute.internal",
            "private_ip": "10.0.0.197",
            "public_dns": "ec2-3-96-254-146.ca-central-1.compute.amazonaws.com",
            "public_ip": "3.96.254.146",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Blueprint": "eks-blueprints",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-blueprints-ca-central-1a"
            },
            "tags_all": {
              "Blueprint": "eks-blueprints",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-blueprints-ca-central-1a"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:413436767063:internet-gateway/igw-087d90a6431f072c9",
            "id": "igw-087d90a6431f072c9",
            "owner_id": "413436767063",
            "tags": {
              "Blueprint": "eks-blueprints",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-blueprints"
            },
            "tags_all": {
              "Blueprint": "eks-blueprints",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-blueprints"
            },
            "vpc_id": "vpc-06f90c9867f441d35"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0240c2feff117a026",
            "connectivity_type": "public",
            "id": "nat-0c8d3e12d6a0ebf73",
            "network_interface_id": "eni-076e29cfd7f9f75fd",
            "private_ip": "10.0.0.197",
            "public_ip": "3.96.254.146",
            "subnet_id": "subnet-0b103d3c61d0425b2",
            "tags": {
              "Blueprint": "eks-blueprints",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-blueprints-ca-central-1a"
            },
            "tags_all": {
              "Blueprint": "eks-blueprints",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-blueprints-ca-central-1a"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-03f8b8c406bdaa9be1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0c8d3e12d6a0ebf73",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03f8b8c406bdaa9be",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-087d90a6431f072c9",
            "id": "r-rtb-0797a9fc434871a171080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0797a9fc434871a17",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:413436767063:route-table/rtb-03f8b8c406bdaa9be",
            "id": "rtb-03f8b8c406bdaa9be",
            "owner_id": "413436767063",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c8d3e12d6a0ebf73",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Blueprint": "eks-blueprints",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-blueprints-private"
            },
            "tags_all": {
              "Blueprint": "eks-blueprints",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-blueprints-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-06f90c9867f441d35"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:413436767063:route-table/rtb-0797a9fc434871a17",
            "id": "rtb-0797a9fc434871a17",
            "owner_id": "413436767063",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-087d90a6431f072c9",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Blueprint": "eks-blueprints",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-blueprints-public"
            },
            "tags_all": {
              "Blueprint": "eks-blueprints",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-blueprints-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-06f90c9867f441d35"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-004984649baa1aebb",
            "route_table_id": "rtb-03f8b8c406bdaa9be",
            "subnet_id": "subnet-048c3115fc7810c31"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-020a186ec06b2de6e",
            "route_table_id": "rtb-03f8b8c406bdaa9be",
            "subnet_id": "subnet-05fe1547d94f3f012"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06407fd1ae24277b3",
            "route_table_id": "rtb-03f8b8c406bdaa9be",
            "subnet_id": "subnet-0e67129720af216b3"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0130383736b44ce4c",
            "route_table_id": "rtb-0797a9fc434871a17",
            "subnet_id": "subnet-0b103d3c61d0425b2"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01970d3a2c9a90d9e",
            "route_table_id": "rtb-0797a9fc434871a17",
            "subnet_id": "subnet-0f481ca00115fd7ec"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-074e49a72535567c6",
            "route_table_id": "rtb-0797a9fc434871a17",
            "subnet_id": "subnet-00d186ecb2885d7d4"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:413436767063:subnet/subnet-048c3115fc7810c31",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-048c3115fc7810c31",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "413436767063",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "eks-blueprints",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-blueprints-private-ca-central-1a",
              "kubernetes.io/cluster/eks-blueprints": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Blueprint": "eks-blueprints",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-blueprints-private-ca-central-1a",
              "kubernetes.io/cluster/eks-blueprints": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-06f90c9867f441d35"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:413436767063:subnet/subnet-05fe1547d94f3f012",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05fe1547d94f3f012",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "413436767063",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "eks-blueprints",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-blueprints-private-ca-central-1b",
              "kubernetes.io/cluster/eks-blueprints": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Blueprint": "eks-blueprints",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-blueprints-private-ca-central-1b",
              "kubernetes.io/cluster/eks-blueprints": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-06f90c9867f441d35"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:413436767063:subnet/subnet-0e67129720af216b3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1d",
            "availability_zone_id": "cac1-az4",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e67129720af216b3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "413436767063",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "eks-blueprints",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-blueprints-private-ca-central-1d",
              "kubernetes.io/cluster/eks-blueprints": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Blueprint": "eks-blueprints",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-blueprints-private-ca-central-1d",
              "kubernetes.io/cluster/eks-blueprints": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-06f90c9867f441d35"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:413436767063:subnet/subnet-0b103d3c61d0425b2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b103d3c61d0425b2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "413436767063",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "eks-blueprints",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-blueprints-public-ca-central-1a",
              "kubernetes.io/cluster/eks-blueprints": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Blueprint": "eks-blueprints",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-blueprints-public-ca-central-1a",
              "kubernetes.io/cluster/eks-blueprints": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-06f90c9867f441d35"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:413436767063:subnet/subnet-0f481ca00115fd7ec",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f481ca00115fd7ec",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "413436767063",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "eks-blueprints",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-blueprints-public-ca-central-1b",
              "kubernetes.io/cluster/eks-blueprints": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Blueprint": "eks-blueprints",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-blueprints-public-ca-central-1b",
              "kubernetes.io/cluster/eks-blueprints": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-06f90c9867f441d35"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:413436767063:subnet/subnet-00d186ecb2885d7d4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1d",
            "availability_zone_id": "cac1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00d186ecb2885d7d4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "413436767063",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "eks-blueprints",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-blueprints-public-ca-central-1d",
              "kubernetes.io/cluster/eks-blueprints": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Blueprint": "eks-blueprints",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-blueprints-public-ca-central-1d",
              "kubernetes.io/cluster/eks-blueprints": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-06f90c9867f441d35"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:413436767063:vpc/vpc-06f90c9867f441d35",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03bc31fb109e3d605",
            "default_route_table_id": "rtb-03392c74f1067828f",
            "default_security_group_id": "sg-078e0fe2aeffd8f8d",
            "dhcp_options_id": "dopt-0b8629c2c58fc00ea",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06f90c9867f441d35",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03392c74f1067828f",
            "owner_id": "413436767063",
            "tags": {
              "Blueprint": "eks-blueprints",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-blueprints"
            },
            "tags_all": {
              "Blueprint": "eks-blueprints",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-blueprints"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}